# cereal-box-style-mcp

./: README.md  cereal_box_style_mcp.py  pyproject.toml
src/cereal_box_style_mcp/: __init__.py  __main__.py  server.py
src/cereal_box_style_mcp/data/: templates.json  transformation_maps.json
src/cereal_box_style_mcp/tools/: __init__.py  transformer.py
