[project]
name = "cereal-box-style-mcp"
version = "0.1.0"
description = "MCP server for transforming prompts through cereal box design aesthetics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp"
]

[project.scripts]
cereal-box-style-mcp = "cereal_box_style_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cereal_box_style_mcp"]